manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: lab
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
